Allow specifying base URI by user input

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <main>
+        <form id="baseForm">
+            <label>Base URI <input id="baseInput" /></label>
+            <input type="submit" value="Show" />
+        </form>
         <div id="sprites"></div>
     </main>
 </body>
