Adjust input field size

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8" />
 	<title>Sprite viewer</title>
 	<script src="render.js" defer=""></script>
-	<link href="sprite.css" rel="stylesheet" />
+	<link href="style.css" rel="stylesheet" />
 </head>
 <body>
     <main>
         <form id="baseForm">
-            <label>Base URI <input id="baseInput" /></label>
+            <label>Base URI <input id="baseInput" type="text" /></label>
             <input type="submit" value="Show" />
         </form>
         <div id="sprites"></div>
