Accept URI of the sprite directly

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <form id="baseForm">
-            <label>Base URI <input id="baseInput" type="text" /></label>
+            <label>Sprite URI <input id="baseInput" type="text" /></label>
             <input type="submit" value="Show" />
         </form>
         <div id="sprites"></div>
