Change history state when reloading sprites

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <main>
-        <form id="baseForm">
-            <label>Sprite URI <input id="baseInput" type="text" /></label>
+        <form id="uriForm">
+            <label>Sprite URI <input class="uri-input" name="uri" type="text" /></label>
             <input type="submit" value="Show" />
         </form>
         <div id="sprites"></div>
