Set referer policy

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Sprite viewer</title>
 	<script src="render.js" defer=""></script>
 	<link href="style.css" rel="stylesheet" />
+    <meta name="referrer" content="no-referrer"/>
 </head>
 <body>
     <main>
